--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hellow World!
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset='UTF-8'>
+		<title>shiolier.github.io</title>
+	</head>
+	<body>
+		<h1>shiolier.github.io</h1>
+	</body>
+</html>
